fixing alignment of title in top section

--- a/css/homePageStyling.css
+++ b/css/homePageStyling.css
@@ -11,7 +11,7 @@ body {
 
 h2, h4 {
   margin: 0.5rem 0;
-  text-align: center;
+  text-align: right;
 }
 
 h4{
